# foundationpose-ros2

./: .gitignore  .gitmodules  LICENSE  README.md
results/: benchmark_results.json
ros2_ws/: .gitignore  frames_2026-06-23_00.25.31.gv
ros2_ws/src/pose_estimation_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/pose_estimation_pkg/config/: params.yaml
ros2_ws/src/pose_estimation_pkg/pose_estimation_pkg/: benchmark_node.py  foundationpose_node.py  sam2_node.py
ros2_ws/src/robot_control_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_control_pkg/launch/: moveit_bringup.launch.py  robot_bringup.launch.py
ros2_ws/src/robot_control_pkg/robot_control_pkg/: grasp_executor.py  moveit_bringup.launch.py  trajectory_animator.py
ros2_ws/src/simulation_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/simulation_pkg/launch/: gazebo.launch.py
ros2_ws/src/simulation_pkg/rviz/: pose_estimation.rviz
ros2_ws/src/simulation_pkg/simulation_pkg/: scene_markers_node.py
ros2_ws/src/simulation_pkg/worlds/: table_scene.sdf
