<?xml version="1.0"?>
<package format="3">
  <name>simulation_pkg</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic simulation environment with RGB-D camera for pose estimation</description>
  <maintainer email="samanthkrishna2001@gmail.com">Samanth Krishna</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>